--- a/virtuswift-react/public/orange-banner.html
+++ b/virtuswift-react/public/orange-banner.html
@@ -26,11 +26,9 @@
       position: relative;
       z-index: 10;
       color: white;
-      padding: 0 60px;
+      padding: 60px;
       max-width: 650px;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      margin-left: 12%;
-      margin-top: -2rem;
     }
     
     .content h1 {
