--- a/virtuswift-react/public/orange-banner.html
+++ b/virtuswift-react/public/orange-banner.html
@@ -27,8 +27,9 @@
       z-index: 10;
       color: white;
       padding: 60px;
-      max-width: 650px;
+      max-width: 600px;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      animation: slideUp 1.2s ease-out;
     }
     
     .content h1 {
