--- a/virtuswift-react/public/orange-banner.html
+++ b/virtuswift-react/public/orange-banner.html
@@ -28,6 +28,7 @@
       color: white;
       padding: 60px;
       max-width: 600px;
+      margin-left: 1.8%;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       animation: slideUp 1.2s ease-out;
     }
